actualizando el proyecto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col-md-5">
             <div class="card">
                 <div class="card-body">
-                    <form id="persona">
+                    <form id="table-persona">
                         <div class="form-group">
                             <input type="text" id="nombres" placeholder="nombres" required>
                         </div>
