busqueda completa y se muestran datos en la tabla

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <table class="table table-bordered table-sm">
                 <thead>
                     <tr>
+                        <td>Código</td>
                         <td>Nombres</td>
                         <td>Apellidos</td>
                         <td>Direccion</td>
