--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CRUD AJAX</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
+    <script src="fontawesome.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -23,6 +24,7 @@
             <div class="card">
                 <div class="card-body">
                     <form id="table-persona">
+                        <input type="hidden" id="idPers"></input>
                         <div class="form-group">
                             <input type="text" id="nombres" placeholder="nombres" required>
                         </div>
@@ -38,7 +40,7 @@
                         <div class="form-group">
                             <input type="tel" id="telefono" placeholder="Numero de telefono" required pattern="[0-9]{8}">
                         </div>
-                        <button type="submit" class="btn btn-success btn-block text center">Guardar</button>
+                        <button type="submit" class="btn btn-success btn-block text center" id="submit">Guardar</button>
                     </form>
                 </div>
             </div>
@@ -67,7 +69,6 @@
         </div>
     </div>
 </div>
-    
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
     integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
     crossorigin="anonymous"></script>
