--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </form>
     </ul>
 </nav>
-<div class="container p-4">
+<div>
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-md-3    ">
             <div class="card">
                 <div class="card-body">
                     <form id="table-persona">
